--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "bugs": {
     "url": "https://github.com/MarceloMariduena/Mismatch/issues"
   },
-  "homepage": "https://github.com/MarceloMariduena/Mismatch#readme",
+  "homepage": "http://MarceloMariduena.github.io/Mismatch",
   "dependencies": {
     "gh-pages": "^2.2.0"
   }
